<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Popular Movies</string>
    <string name="title_movie">Movie Title</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="movie_poster">Movie Poster</string>

    <string name="action_sort">Sort</string>
    <string name="menuSortMostPopular">Sort by most popular</string>
    <string name="menuSortHighestRated">Sort by highest rated</string>
    <string name="menuSortFavorites">Sort by favorites</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">popularmovies.tasty.technology</string>
    <string name="content_authority">technology.tasty.popularmovies</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Movies Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Notification Format -->
    <string name="format_notification">Discover the most popular movie: <xliff:g id="title">%1$s</xliff:g></string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>

</resources>
