<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MovieListActivity">

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_filter_act_darkbg"
        android:title="@string/action_sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menuSortMostPopular"
                android:title="@string/menuSortMostPopular" />
            <item
                android:id="@+id/menuSortHighestRated"
                android:title="@string/menuSortHighestRated" />
            <item
                android:id="@+id/menuSortFavorites"
                android:title="@string/menuSortFavorites" />
        </menu>
        </item>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>